// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorRow renders  a row with index and contributor set calls delete function 1`] = `
<ContributorRow
  canMoveDown={false}
  canMoveUp={false}
  contributor={
    Object {
      "nameAsPublished": "A. Smith",
    }
  }
  disabled={false}
  disabledContributorAssignment={false}
  index={0}
  locale={
    Object {
      "deleteHint": "Remove this record",
      "deleteRecordConfirmation": Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      },
      "moveDownHint": "Move record down the order",
      "moveUpHint": "Move record up the order",
      "ordinalData": Array [
        "First",
        "Second",
        "Third",
        "Fourth",
        "Fifth",
        "Sixth",
        "Seventh",
        "Eighth",
        "Ninth",
        "Tenth",
      ],
      "selectTooltip": "Select this record as you",
      "selectedTooltip": "This is you",
      "suffix": " listed contributor",
    }
  }
  onDelete={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "nameAsPublished": "A. Smith",
          },
          0,
        ],
      ],
    }
  }
  showContributorAssignment={false}
  showIdentifierLookup={false}
>
  <div
    className="contributorsRow datalist datalist-row "
  >
    <ConfirmDialogBox
      hideCancelButton={false}
      locale={
        Object {
          "cancelButtonLabel": "No",
          "confirmButtonLabel": "Yes",
          "confirmationMessage": "Are you sure you want to delete this record?",
          "confirmationTitle": "Delete record",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    >
      <Dialog
        actions={
          Array [
            <div
              className="columns dialog-actions ConfirmDialogBox-actions"
            >
              <div
                className="column is-hidden-mobile"
              />
              <div
                className="column is-narrow"
              >
                <RaisedButton
                  className="ConfirmDialogBox-actions-cancel"
                  disabled={false}
                  fullWidth={true}
                  label="No"
                  labelPosition="after"
                  onTouchTap={[Function]}
                  primary={false}
                  secondary={false}
                />
              </div>
              <div
                className="column is-narrow"
              >
                <RaisedButton
                  className="ConfirmDialogBox-actions-confirm"
                  disabled={false}
                  fullWidth={true}
                  keyboardFocused={true}
                  label="Yes"
                  labelPosition="after"
                  onTouchTap={[Function]}
                  primary={false}
                  secondary={true}
                />
              </div>
              <div
                className="is-clearfix"
              />
            </div>,
          ]
        }
        autoDetectWindowHeight={true}
        autoScrollBodyContent={false}
        modal={true}
        open={false}
        repositionOnUpdate={true}
        title="Delete record"
      >
        <RenderToLayer
          open={true}
          render={[Function]}
          useLayerForClickAway={false}
        />
      </Dialog>
    </ConfirmDialogBox>
    <div
      className="columns is-gapless is-mobile"
    >
      <div
        className="column"
      >
        <div
          className="columns is-gapless contributorDetails"
        >
          <div
            className="column is-narrow is-hidden-mobile"
          >
            <FontIcon
              className="authorIcon material-icons"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="authorIcon material-icons"
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.87)",
                    "display": "inline-block",
                    "fontSize": 24,
                    "muiPrepared": true,
                    "position": "relative",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "userSelect": "none",
                  }
                }
              >
                person_outline
              </span>
            </FontIcon>
          </div>
          <div
            className="column datalist-text"
          >
            <span
              className="contributorName"
            >
              A. Smith
            </span>
            <span
              className="contributorSubtitle datalist-text-subtitle"
            >
              First  listed contributor
            </span>
          </div>
        </div>
      </div>
      <div
        className="column is-narrow"
      >
        <div
          className="columns is-gapless contributorActions"
        >
          <div
            className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
          />
          <div
            className="column is-narrow contributorDelete datalist-buttons"
          >
            <IconButton
              aria-label="Remove this record"
              className="contributorDelete"
              data-for="contributorRow"
              data-tip="Remove this record"
              disableTouchRipple={false}
              disabled={false}
              iconStyle={Object {}}
              onTouchTap={[Function]}
              tooltipPosition="bottom-center"
              touch={false}
            >
              <EnhancedButton
                aria-label="Remove this record"
                centerRipple={true}
                className="contributorDelete"
                containerElement="button"
                data-for="contributorRow"
                data-tip="Remove this record"
                disableTouchRipple={false}
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onKeyboardFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "boxSizing": "border-box",
                    "fontSize": 0,
                    "height": 48,
                    "overflow": "visible",
                    "padding": 12,
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "width": 48,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <button
                  aria-label="Remove this record"
                  className="contributorDelete"
                  data-for="contributorRow"
                  data-tip="Remove this record"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOut={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "background": "none",
                      "border": 10,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": 0,
                      "fontWeight": "inherit",
                      "height": 48,
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "overflow": "visible",
                      "padding": 12,
                      "position": "relative",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": 48,
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <TouchRipple
                    abortOnScroll={true}
                    centerRipple={true}
                    key="touchRipple"
                  >
                    <div
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                    >
                      <FontIcon
                        className="material-icons deleteIcon"
                        key=".0"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={Object {}}
                      >
                        <span
                          className="material-icons deleteIcon"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "color": "rgba(0, 0, 0, 0.87)",
                              "display": "inline-block",
                              "fontSize": 24,
                              "muiPrepared": true,
                              "position": "relative",
                              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                              "userSelect": "none",
                            }
                          }
                        >
                          delete
                        </span>
                      </FontIcon>
                    </div>
                  </TouchRipple>
                </button>
              </EnhancedButton>
            </IconButton>
          </div>
        </div>
      </div>
    </div>
    <ReactTooltip
      className="reactTooltip"
      effect="solid"
      event="focusin mouseenter"
      eventOff="blur mouseleave"
      id="contributorRow"
      insecure={true}
      place="top"
      resizeHide={true}
      wrapper="div"
    >
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
      />
    </ReactTooltip>
    <ReactTooltip
      className="reactTooltip"
      effect="solid"
      event="focusin mouseenter"
      eventOff="blur mouseleave"
      id="contributorSelect"
      insecure={true}
      place="top"
      resizeHide={true}
      wrapper="div"
    >
      <div
        className="__react_component_tooltip place-top type-dark "
        data-id="tooltip"
      />
    </ReactTooltip>
  </div>
</ContributorRow>
`;

exports[`ContributorRow renders  a row with index and contributor set, renders only name and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column"
    >
      <div
        className="columns is-gapless contributorDetails"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text"
        >
          <span
            className="contributorName"
          >
            A. Smith
          </span>
          <span
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </span>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        />
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            data-for="contributorRow"
            data-tip="Remove this record"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorRow"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorSelect"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
</div>
`;

exports[`ContributorRow renders  a row with index and contributor set, renders reorder buttons, contributor assignment, and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column"
    >
      <div
        className="columns is-gapless contributorDetails"
        data-for="contributorSelect"
        data-tip="Select this record as you"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text"
        >
          <span
            className="contributorName"
          >
            A. Smith
          </span>
          <span
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </span>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <IconButton
            aria-label="Move record up the order"
            className="reorderUp"
            data-for="contributorRow"
            data-tip="Move record up the order"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <FontIcon
              className="material-icons"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              keyboard_arrow_up
            </FontIcon>
          </IconButton>
          <IconButton
            aria-label="Move record down the order"
            className="reorderDown"
            data-for="contributorRow"
            data-tip="Move record down the order"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <FontIcon
              className="material-icons"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              keyboard_arrow_down
            </FontIcon>
          </IconButton>
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            data-for="contributorRow"
            data-tip="Remove this record"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorRow"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorSelect"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
</div>
`;

exports[`ContributorRow renders  a row with index and contributor with author details set, contributor author details, and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column"
    >
      <div
        className="columns is-gapless contributorDetails"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text"
        >
          <span
            className="contributorName"
          >
            J. Smith
          </span>
          <span
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </span>
        </div>
        <div
          className="column is-3-desktop is-3-tablet is-5-mobile contributorIdentifier datalist-text"
        >
          <strong>
             
          </strong>
          <br />
          <small />
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        />
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            data-for="contributorRow"
            data-tip="Remove this record"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onTouchTap={[Function]}
            tooltipPosition="bottom-center"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorRow"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
  <ReactTooltip
    className="reactTooltip"
    effect="solid"
    event="focusin mouseenter"
    eventOff="blur mouseleave"
    id="contributorSelect"
    insecure={true}
    place="top"
    resizeHide={true}
    wrapper="div"
  />
</div>
`;
